syntax = "proto3";

package spine.server.catchup;

import "spine/options.proto";
import "spine/time_options.proto";

option (type_url_prefix) = "type.spine.io";
option (internal_all) = true;
option (every_is).java_type = "io.spine.server.delivery.CatchUpSignal";

option java_package = "io.spine.server.delivery.event";
option java_outer_classname = "CatchUpEventsProto";
option java_multiple_files = true;

import "spine/server/catchup/catch_up.proto";

// The catch-up has been requested.
message CatchUpRequested {

    CatchUpId id = 1;

    // A request describing the catch-up properties.
    CatchUp.Request request = 2;
}

// The catch-up has been started.
message CatchUpStarted {

    CatchUpId id = 1;
}

// The next portion of the historical events was read and dispatched to the respective entities.
message HistoryEventsRecalled {

    CatchUpId id = 1;
}

// The whole history of the events was read and dispatched to the respective entities.
message HistoryFullyRecalled {

    CatchUpId id = 1;
}

// The catch-up process has detected the recently dispatched events and has sent them to the
// respective entities.
//
message LiveEventsPickedUp {

    CatchUpId id = 1;
}

// The catch-up process has been completed.
message CatchUpCompleted {

    CatchUpId id = 1;
}
